fixing hover on mobile

--- a/style.css
+++ b/style.css
@@ -450,9 +450,23 @@ footer {
 }
 
 @media only screen and (max-width: 500px) {
-    .overlay {
-        opacity: 0.7;
-    }
+/*   
+  .box1 .overlay, {
+    opacity: 0.7;
+    background-color: #ffe2d1;
+  }
+
+    /* .overlay {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      height: 100%;
+      width: 100%;
+      opacity: 0;
+      transition: .5s ease;
+    } */ 
 }
 
 
